# MyZip

./: .gitignore  README.md
MyZip/: BaseFileCreator.py  BaseFileViewer.py  picture.py
MyZip/styles/Arc/: arc.tcl  pkgIndex.tcl
SevenZipSupport/bit7z/: CMakeLists.txt  pybit7z.cpp  pybit7z.hpp  setup.py
SevenZipSupport/bit7z_documents/: BitArchive.md  BitFile.md  BitMem.md  BitStream.md
